--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,9 @@ NEXMO_SECRET=
 PURCHASE_CODE=
 BUYER_USERNAME=
 SOFTWARE_ID=MzE0NDg1OTc=
+
+
+BTS_USERNAME=1111
+BTS_PASSWORD=111
+BTS_INN=11111
+BTS_URL=http://api.bts.uz:8080/index.php
