--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "paypal/rest-api-sdk-php": "^1.6",
         "phonepe/phonepe-pg-php-sdk": "^1.0",
         "phpoffice/phpspreadsheet": "^1.29",
+        "predis/predis": "^3.0",
         "rap2hpoutre/fast-excel": "^5.3",
         "razorpay/razorpay": "^2.9",
         "rennokki/laravel-eloquent-query-cache": "^3.4",
