--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "iyzico/iyzipay-php": "^2.0",
+        "knuckleswtf/scribe": "^5.2",
         "kreait/firebase-php": "^7.0",
         "laravel/framework": "^10.10",
         "laravel/passport": "^12.3",
@@ -50,6 +51,7 @@
         "rap2hpoutre/fast-excel": "^5.3",
         "razorpay/razorpay": "^2.9",
         "rennokki/laravel-eloquent-query-cache": "^3.4",
+        "scalar/laravel": "^0.2.0",
         "spatie/image-optimizer": "^1.7",
         "spatie/laravel-sitemap": "^7.1",
         "stripe/stripe-php": "^13.9",
