--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ BTS_PASSWORD=111
 BTS_INN=11111
 BTS_URL=http://api.bts.uz:8080/index.php
 BTS_TEST=1
+
+
+ESKIZ_EMAIL=admin@gmail.com
+ESKIZ_PASSWORD=password
