--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "intervention/image": "^2.7",
         "iyzico/iyzipay-php": "^2.0",
         "jscorptech/atmospay": "*",
+        "jscorptech/jst-eskiz": "^0.1.0",
         "jscorptech/payme": "^0.5.0",
         "knuckleswtf/scribe": "^5.2",
         "kreait/firebase-php": "^7.0",
