--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
         "scalar/laravel": "^0.2.0",
         "spatie/image-optimizer": "^1.7",
         "spatie/laravel-sitemap": "^7.1",
+        "spiral/roadrunner": "^2025.1",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "stripe/stripe-php": "^13.9",
         "symfony/translation": "^6.4",
         "twilio/sdk": "^7.14",
