--- a/composer.json
+++ b/composer.json
@@ -59,8 +59,8 @@
         "spatie/image-optimizer": "^1.7",
         "spatie/laravel-sitemap": "^7.1",
         "spiral/roadrunner": "^2025.1",
-        "spiral/roadrunner-cli": "^2.6.0",
-        "spiral/roadrunner-http": "^3.3.0",
+        "spiral/roadrunner-cli": "^2.7",
+        "spiral/roadrunner-http": "^3.6",
         "stripe/stripe-php": "^13.9",
         "symfony/translation": "^6.4",
         "twilio/sdk": "^7.14",
@@ -103,7 +103,8 @@
             "app/Utils/product.php",
             "app/Utils/settings.php",
             "app/Utils/panel-helpers.php",
-            "app/Utils/theme-helpers.php"
+            "app/Utils/theme-helpers.php",
+            "app/Helpers/delivery.php"
         ],
         "psr-4": {
             "App\\": "app/",
